// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Proto file describing the common error protos.
syntax = "proto3";

package google.ads.googleads.lib.test.errors;

option java_package = "com.google.ads.googleads.lib.test.errors";
option java_outer_classname = "ErrorsProto";
option java_multiple_files = true;

// Describes how a GoogleAds API call failed. It's returned inside
// google.rpc.Status.details when a call fails.
message MockFailure {
  // The list of errors that occurred.
  repeated MockError errors = 1;
}

// GoogleAds-specific error.
message MockError {
  // Describes the part of the request proto that caused the error.
  repeated MockPath location = 1;
}

message MockPath {
  string fieldName = 1;
  Int64Value index = 2;
}

message Int64Value {
  // The int64 value.
  int64 value = 1;
}
